# ai-discovery-accelerator

./: .env.example  .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
core/: data_loader.py  orchestrator.py  utils.py
core/agents/: __init__.py  data_profiler.py  feature_intelligence.py  gap_analyst.py  insight_synthesiser.py  model_selector.py
discovery_reports/: churn_prediction.md  fraud_detection.md  sales_forecasting.md
tests/: test_data_loader.py  test_data_profiler.py  test_feature_intelligence.py
