[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "ai-discovery-accelerator"
version = "1.0.0"
description = "Multi-agent AI system for rapid ML opportunity discovery powered by Amazon Bedrock"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Kumaresa Perumal" }
]
keywords = ["machine-learning", "mlops", "amazon-bedrock", "data-profiling", "ai-agents"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Data Scientists",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.10"
dependencies = [
    "boto3>=1.34.0",
    "pandas>=2.0.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.4.0",
    "scipy>=1.12.0",
    "rich>=13.0.0",
    "python-dotenv>=1.0.0",
    "faker>=24.0.0",
    "openpyxl>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.3.0",
    "mypy>=1.9.0",
]

[project.scripts]
ai-discovery = "main:main"

[project.urls]
Repository = "https://github.com/kumaresaperumal/ai-discovery-accelerator"
Issues = "https://github.com/kumaresaperumal/ai-discovery-accelerator/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["core*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "W", "I", "N", "UP"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
